--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,6 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
             rel="stylesheet"
@@ -17,7 +16,7 @@
             integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
             crossorigin="anonymous"
     />
-    <title>React App</title>
+    <title>Помогаем с учебой</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
